trunk/Archive2/66/8c9344ee96f7bc/output
main.cpp: In function 'int main()':
main.cpp:6:5: error: a function-definition is not allowed here before '{' token
     {
     ^
main.cpp:10:12: error: 'foobar' was not declared in this scope
     foobar();
            ^
