trunk/Archive2/66/8c9344ee96f7bc/main.cpp
#include <iostream>

int main()
{
    void foobar()
    {
        std::cout << "works?" << std::endl;
    }
    
    foobar();
}
